--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "3.4.1",
     "@capacitor/ios": "^3.4.1",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage-angular": "3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
